metric/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: ingress-nginx
spec:
  ports:
  - port: 9090
    targetPort: 9090
    protocol: TCP
  selector:
    app.kubernetes.io/name: prometheus
