metric/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: entto-monitor
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
  namespace: ingress-nginx
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - pmt.enttolog.shop
    - gf.enttolog.shop
    secretName: entto-shop-monitors-tls
  rules:
  - host: pmt.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-server
            port:
              number: 9090
  - host: gf.enttolog.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
